# FrameLib

./: .gitignore  CMakeLists.txt  build.bat  build.sh
cmake/utils/: compile_tools.cmake  remotes.cmake
examples/: CMakeLists.txt
examples/001_window/: main.c
include/FLIB/: events.h  frame.h  window.h
include/FrameLib/: frame.h
src/: main.c  renderer.c  result.c  windower.c
src/Common/: test.c
src/Common/include/: test.h
src/Win32/: events.c  window.c
tests/: CMakeLists.txt
